# Topic-Scout-Agent

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  pyproject.toml  render.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  deploy-render.yml  issue-autofix.yml
scripts/: issue_autofix.py
src/topic_scout/: __init__.py  analyzer.py  cli.py  collector.py  deploy.py  llm.py  models.py  normalizer.py  planner.py  prompts.py  renderer.py  repository.py  service.py  web.py
tests/: test_cli.py  test_pipeline.py  test_web.py
tests/fixtures/: sample_note.txt  sample_posts.csv  sample_posts.json
